# iomrascalai

./: .gitignore  .projectile  .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  Makefile  README.md  appveyor.yml  bench.sh  build.rs  code_of_conduct.md
ci/: before_deploy.sh  script.sh
fixtures/board/: illegalmove.sgf
fixtures/sgf/: empty.sgf  endgame-black-wins.sgf  final_score_crash.sgf  finished.sgf  handicap.sgf  handicapandtwomoves.sgf  hypothetical-plays.sgf  ladders.sgf  no-legal-moves-left.sgf  not-superko.sgf  not-superko2.sgf  positional-superko.sgf  recapture-but-not-ko.sgf  twomoves.sgf
fixtures/sgf/3x3/: one-black-e.sgf  one-black-n.sgf  one-black-ne.sgf  one-black-nw.sgf  one-black-s.sgf  one-black-se.sgf  one-black-sw.sgf  one-black-w.sgf  one-white-w.sgf
fixtures/sgf/eye/: corner-no-enemies.sgf  corner-not-an-eye.sgf  corner-one-enemy.sgf  edge-no-enemies.sgf  edge-not-an-eye.sgf  edge-one-enemy.sgf  no-enemies.sgf  not-an-eye.sgf  one-enemy.sgf  two-enemies.sgf
fixtures/sgf/pattern/: two-stones.sgf
fixtures/sgf/score/: dame.sgf  disjoint.sgf  simple.sgf
misc/clop/: atari-runner  atari.clop  expand_after-runner  expand_after.clop  experiment13.clop  large-patterns-in-playouts  large-patterns-in-playouts.clop  large-patterns-in-prior.clop  large-patterns.clop  new-runner  new.clop  ownership-runner  ownership.clop  playouts.clop  priors-runner  priors.clop  runner  runner.rb  runner13  time-control.clop  time-settings.clop  time_control-runner  time_control.clop  tree.clop
misc/clop/lib/: analyze.rb  dir.rb  from_assoc.rb  lib.rb  run.rb  to_toml.rb
misc/kgs/: Imrscl.cfg  Imrscl.cfg.example  run.sh
misc/kgs/kgsGtp-3.5.20/: kgsGtp.xhtml
misc/lib/: benchmark_results.rb
misc/linux/: install.sh
misc/scripts/: optimize_threads.rb
src/: config.rs  fixtures.rs  iomrascalai.rs  main.rs  version.rs
src/benchmarks/: mod.rs
src/board/: board_test.rs  chain.rs  chain_test.rs  coord.rs  coord_test.rs  hash.rs  hypotheticals.rs  mod.rs  move.rs  reading.rs  test.rs
src/board/chain/: mod.rs  test.rs
src/board/coord/: mod.rs  test.rs
src/board/move/: mod.rs  test.rs
src/board/movement/: mod.rs  test.rs
src/board/point/: mod.rs
src/board/test/: diagonals.rs  eye.rs  (+5 more)
src/cli/: mod.rs
src/config/: defaults.toml  mod.rs  test.rs
src/engine/: amaf.rs  mod.rs  random.rs  random_engine.rs  test.rs
src/game/: game_test.rs  hash.rs  mod.rs
src/gtp/: driver.rs  engine.rs  mod.rs  test.rs
src/ownership/: mod.rs  test.rs
src/patterns/: mod.rs  test.rs
src/playout/: mod.rs  no_eyes.rs  simple.rs  test.rs
src/ruleset/: mod.rs  test.rs
src/score/: mod.rs  territory.rs  test.rs
src/sgf/: mod.rs  parser.rs
src/timer/: mod.rs  test.rs
src/uct_gfx/: mod.rs
(+60 files in other folders)
