[package]

description = "An AI for the game of Go"
name = "iomrascalai"
version = "0.2.4"
authors = ["Urban Hafner <contact@urbanhafner.com>",
        "Thomas Poinsot <thomas.poinsot1@gmail.com>",
        "Igor Polyakov <iopguy+iomrasclai@gmail.com>"]
homepage = "https://github.com/ujh/iomrascalai"
repository = "https://github.com/ujh/iomrascalai"
license = "GPL-3.0+"

[dependencies]
enum_primitive  = "*"
getopts         = "*"
num             = "*"
quicksort       = "*"
rand            = "*"
regex           = "*"
regex_macros    = "*"
smallvec        = "*"
strenum         = "*"
thread-scoped   = "*"
time            = "*"

[dev-dependencies.hamcrest]
git = "https://github.com/carllerche/hamcrest-rust.git"

[dev-dependencies.stainless]
git = "https://github.com/reem/stainless.git"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
